[gd_scene load_steps=4 format=3 uid="uid://b2arfnoe585sm"]

[ext_resource type="Script" path="res://elements/hud/inventory_menu/inventory_item/inventory_item.gd" id="1_pftji"]
[ext_resource type="Texture2D" uid="uid://cfaljyycvagbd" path="res://asset/items/32x32_PixelWeapons_Premium.png" id="2_13756"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pe8o1"]
atlas = ExtResource("2_13756")
region = Rect2(0, 0, 32, 32)

[node name="InventoryItem" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1216.0
offset_bottom = -656.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pftji")

[node name="ItemTextureRect" type="TextureRect" parent="."]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_pe8o1")

[node name="ItemLevelLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
text = "Lv. 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemRarityLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
offset_right = 16.0
offset_bottom = 16.0
theme_override_font_sizes/font_size = 10
text = "N"
horizontal_alignment = 1
vertical_alignment = 1
